--- a/Homework_2_ax2047.ipynb
+++ b/Homework_2_ax2047.ipynb
@@ -1326,7 +1326,7 @@
         "G_test_acc = [clean_accuracy_repaired_net_2, clean_accuracy_repaired_net_4, clean_accuracy_repaired_net_10]\n",
         "G_attack_rate = [asr_repaired_net_2, asr_repaired_net_4, asr_repaired_net_10]\n",
         "G_data = {\n",
-        "    \"G_text_acc\": G_test_acc,\n",
+        "    \"G_test_acc\": G_test_acc,\n",
         "    \"G_attack_rate\": G_attack_rate,\n",
         "    \"G_model\": [\"G_repaired_2%\", \"G_repaired_4%\", \"G_repaired_10%\"]\n",
         "}\n",
